# hanimo-find

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  PUBLICATION_DECISION.md  README.md  RELEASE_GATE.md  RESEARCH.md  SECURITY.md  THIRD_PARTY_LICENSES.md  THREAT_MODEL.md  about.hbs  about.toml  clippy.toml  deny.toml  proptest.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
bench/: README.md  RESULTS.md  manifest.json  probes.json  run.py
bench/corpus/config/: service.env
bench/corpus/docs/: deploy.md  notes.md  배포.md
bench/corpus/src/: retriever.py  search.rs
conformance/: adversarial-cases.json  evidence-bundle.accepted.json  evidence-bundle.budget-rejected.json  evidence-bundle.rejected.json  query-plan.valid.json  rag-diagnosis.valid.json  v0.constants.json
crates/hanimo-core/: BENCHMARK.md  Cargo.toml  NAME_REVIEW.md  PROVENANCE.md  README.md  SPEC.md
crates/hanimo-core/src/: attestation.rs  bytes.rs  diagnose.rs  evidence.rs  identity.rs  lib.rs  model.rs  rank.rs  render_support.rs  root.rs  search.rs  verify.rs
crates/hanimo-core/src/diagnose/: filesystem.rs  filesystem_tests.rs  scanner.rs
crates/hanimo-core/src/search/: filesystem.rs  ranking.rs
crates/hanimo-core/src/verify/: filesystem.rs  live.rs  mutation_tests.rs  policy.rs
crates/hanimo-core/tests/: conformance_search.rs  critic_render.rs  diagnose.rs  search_behavior.rs  search_contract.rs  search_skips.rs  verify_contract.rs
crates/hanimo-find/: Cargo.toml  FAQ.md  README.md  ROADMAP.md  THREAT_MODEL.md
crates/hanimo-find/docs/: MCP.md
crates/hanimo-find/schema/: rag-diagnosis.schema.json
crates/hanimo-find/src/: cli.rs  commands.rs  main.rs  mcp.rs  search_adapter.rs
crates/hanimo-find/tests/: cli_contract.rs  cli_diagnose_bounds.rs  cli_search_skips.rs  mcp_contract.rs  verify_security_contract.rs
docs/: CONSUMING_EVIDENCE.md  VERIFYING_RELEASES.md
fixtures/: README.md
fixtures/diagnose/positive-repo/: rag_pipeline.txt
fixtures/encoding/: README.md  lf.txt  manifest.json
fixtures/multilingual/config/: feature-flags.txt
fixtures/multilingual/docs/: deploy.md
fixtures/security/: .gitignore  manifest.json
fixtures/security/outside/: secret.txt
fixtures/security/repo/: public.txt  stale.txt
sbom/: hanimo-core.cdx.json  hanimo-find.cdx.json
schema/: evidence-bundle.schema.json  query-plan.schema.json
scripts/: check_package_links.py  generate-sboms.sh  release-gate.sh  sync-package-assets.sh
