[workspace]
members = ["crates/hanimo-core", "crates/hanimo-find"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/flykimjiwon/hanimo-find"
homepage = "https://github.com/flykimjiwon/hanimo-find"
authors = ["Jiwon Kim"]
keywords = ["search", "evidence", "rag", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
base64 = "0.22.1"
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
clap = { version = "4.6.1", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
hex = "0.4.3"
ignore = "0.4.25"
proptest = "1.9.0"
rmcp = { version = "2.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
schemars = { version = "1.2.1", default-features = false, features = ["derive", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", default-features = false, features = ["io-std", "macros", "rt"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"
non_ascii_idents = "deny"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
single_use_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"
mem_forget = "deny"
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
as_underscore = "deny"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = "line-tables-only"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"
