[package]
name = "hanimo-find"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/hanimo-find"
description = "Evidence-first CLI and MCP adapter for Hanimo Find"
publish = false
include = [
  "/src/**",
  "/tests/**",
  "/LICENSE",
  "/README.md",
  "/SECURITY.md",
  "/SPEC.md",
  "/RESEARCH.md",
  "/ROADMAP.md",
  "/BENCHMARK.md",
  "/PROVENANCE.md",
  "/NAME_REVIEW.md",
  "/PUBLICATION_DECISION.md",
  "/schema/evidence-bundle.schema.json",
  "/schema/query-plan.schema.json",
  "/schema/rag-diagnosis.schema.json",
]

[[bin]]
name = "hanimo"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap.workspace = true
hanimo-core = { path = "../hanimo-core", version = "=0.1.0" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
